# RAG-BOT

./: .env.example  .gitignore  DECISIONS.md  Dockerfile.api  Dockerfile.deploy  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  render.yaml
.streamlit/: secrets.toml.example
data/: qa_ground_truth.json  ragas_eval.json
scripts/: evaluate_ragas.py  evaluate_retrieval.py  ingest.py  run_ablation.py  start_prod.py
src/rag_chatbot/: __init__.py  config.py  logging_utils.py  types.py  vectorstore.py
src/rag_chatbot/api/: auth.py  main.py  schemas.py
src/rag_chatbot/evaluation/: ragas_eval.py
src/rag_chatbot/generation/: __init__.py  llm.py  prompting.py  service.py
src/rag_chatbot/ingestion/: loaders.py  pipeline.py  splitter.py
src/rag_chatbot/retrieval/: embeddings.py  reranker.py  retriever.py
src/rag_chatbot/ui/: app.py
src/rag_chatbot_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api.py  test_retrieval_metrics.py  test_splitter.py
